--- a/一些流水账和建议.md
+++ b/一些流水账和建议.md
@@ -42,7 +42,9 @@ Verilog流水线。
 
 一定要搞清楚原理、结构再写。可以参考PPT和往届学长的博客。注意阻塞和延迟槽等。
 
-一定要多做测试。除去造数据部分外，自动化测试的其他部分可以用python或者c++简单实现。我用python写了评测部分，c++写了模拟CPU部分。对于数据，可以同学间多交流一下。
+多做测试！多做测试！多做测试！
+
+除去造数据部分外，自动化测试的其他部分可以用python或者c++简单实现。我用python写了评测部分，c++写了模拟CPU部分。对于数据，可以同学间多交流一下，或者找往届学长造的数据。
 
 #### 第一次
 
@@ -57,3 +59,11 @@ Verilog流水线。
 运算类指令一定要按照他给的操作来模拟，不要自己写等价操作，我自己判断溢出错了好久，按他的写法一遍就过了。
 
 访存是一个根据读出的数据判断写入的寄存器地址的奇怪指令，有两个可能的寄存器地址。但是经过我的实验，暴力暂停到W级再和lw一样转发会TLE，在E和M级判断需要的寄存器是否为两个可能更新的寄存器之一来暂停会run less cycle。感觉是题目有问题。
+
+（第二天重测后发邮件说我过了那题，可还行
+
+## P6
+
+实际上就是在P5的基础上加一些东西。花的时间甚至比P5还要短。注意一些指令行为的规范，比如有些unsigned实际上是假的，需要自行阅读指令集原文。
+
+课上第一题是一个关于乘除模块的简单题，几分钟就写完了，大概是用来强测课下的。后两个题和P5差别不大。课下没问题的话，课上整体比P5还简单。
